--- a/index.html
+++ b/index.html
@@ -222,9 +222,10 @@
 
                 <div class="contato-form-wrapper">
                     <form class="contato-form" id="contact-form" name="contact" method="POST" data-netlify="true"> 
-                        <p class="form-title">Envie sua mensagem</p>
 
-                        <input type="hidden" name="_replyto" value="email">
+                        <input type="hidden" name="form-name" value="contact">
+
+                        <p class="form-title">Envie sua mensagem</p>
 
                         <div class="form-group">
                             <label for="nome">Seu Nome:</label>
